--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ python:
   - 3.2
 # command to install dependencies, e.g. pip install -r requirements.txt
 # --use-mirrors
-# install: PLEASE CHANGE ME
+install: echo
 # # command to run tests, e.g. python setup.py test
 script:  python run_tests.py
+notifications:
+   on_success: change
+   on_failuer: always
