Let's see if this still hangs Travis.
Changed the config settings and told travis to install GitPython. Might as well,
right?

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
   - 3.2
 # command to install dependencies, e.g. pip install -r requirements.txt
 # --use-mirrors
-install: echo
+install: pip install gitpython
 # # command to run tests, e.g. python setup.py test
 script:  python run_tests.py
 notifications:
