--- a/tests/config/01.config
+++ b/tests/config/01.config
@@ -30,3 +30,4 @@ export TODO_DIR="_todo"
 export TODOTXT_DEFAULT_ACTION="lsc"
 export TODO_FILE="$TODO_DIR/todo.txt"
 export DONE_FILE="$TODO_DIR/done.txt"
+export TODOTXT_CFG_FILE="$TODO_DIR/config"
