--- a/tests/config/02.config
+++ b/tests/config/02.config
@@ -1,3 +1,4 @@
+#!/bin/bash
 # TODO.TXT-CLI-python test config all false
 # Copyright (C) 2011-2012  Sigmavirus24
 # 
@@ -16,17 +17,17 @@
 # 
 # TLDR: This is licensed under the GPLv3. See LICENSE for more details.
 
-PLAIN False
-NO_PRI False
-LEGACY False
-INVERT False
-USE_GIT False
-PRE_DATE False
-HIDE_PROJ False
-HIDE_DATE False
-HIDE_CONT False
-TODO_DIR _todo
-TODOTXT_DEFAULT_ACTION lsc
-TODO_FILE _todo/todo.txt
-DONE_FILE _todo/done.txt
-TODOTXT_CFG_FILE _todo/config
+export PLAIN=1
+export NO_PRI=1
+export LEGACY=1
+export INVERT=1
+export USE_GIT=1
+export PRE_DATE=1
+export HIDE_PROJ=1
+export HIDE_DATE=1
+export HIDE_CONT=1
+export TODO_DIR="_todo"
+export TODOTXT_DEFAULT_ACTION="lsc"
+export TODO_FILE="$TODO_DIR/todo.txt"
+export DONE_FILE="$TODO_DIR/done.txt"
+export TODOTXT_CFG_FILE="$TODO_DIR/config"
