--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ python:
   - 3.2
 # command to install dependencies, e.g. pip install -r requirements.txt
 # --use-mirrors
-install: pip install gitpython
+#install: pip install gitpython
+install: echo
 # # command to run tests, e.g. python setup.py test
 script:  python run_tests.py
 notifications:
